--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -79,10 +79,9 @@ jobs:
         working-directory: ./app
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
-        working-directory: ./app
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          path: ./app/out
 
   # Deployment job
   deploy:
